--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,32 @@ body {
 #chartID {
     height: 0;
 }
+
+.modal,
+.overlay {
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+}
+
+.overlay {
+  background: rgba(49, 49, 49, 0.8);
+}
+
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  line-height: 1.4;
+  
+  border-radius: 8px;
+  min-width: 40vw;
+}
+.active-modal{
+    overflow: hidden;
+}
